--- a/01.HumanPoseEstimator.ipynb
+++ b/01.HumanPoseEstimator.ipynb
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 445,
+   "execution_count": 453,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +242,8 @@
     "    plt.show()\n",
     "    \n",
     "    \n",
-    "def plot_annotaions(annotations, box, img):\n",
+    "\n",
+    "def plot_annotations(annotations, box, img):\n",
     "    fig, ax = plt.subplots(ncols=2)\n",
     "    x, y, width, height = box\n",
     "    c_x, c_y = int(x + width), int(y + height)\n",
@@ -255,17 +256,17 @@
     "            coordinates = (x_, y_)\n",
     "            label = image_keypoints[idx]\n",
     "            scatter = ax[1].scatter(x_, y_, s=25)\n",
-    "            if x_ <= (c_x - x)/2:\n",
-    "                plt.annotate(label, coordinates, textcoords=\"offset points\", xytext=(10,30), ha='right',                \n",
-    "                        arrowprops={'color': 'red',\n",
-    "                                   'arrowstyle': 'simple'},fontsize=12,\n",
-    "                        bbox=dict(facecolor='red', alpha=0.5),color='w')\n",
+    "            if x_ <= width / 2:\n",
+    "                plt.annotate(label, coordinates, textcoords=\"offset points\", xytext=(10, 30), ha='right',\n",
+    "                             arrowprops={'color': 'red',\n",
+    "                                         'arrowstyle': 'simple'}, fontsize=12,\n",
+    "                             bbox=dict(facecolor='red', alpha=0.5), color='w')\n",
     "            else:\n",
-    "                 plt.annotate(label, coordinates, textcoords=\"offset points\", xytext=(10,30), ha='left',                \n",
-    "                        arrowprops={'color': 'red',\n",
-    "                                   'arrowstyle': 'simple'},fontsize=12,\n",
-    "                        bbox=dict(facecolor='red', alpha=0.5),color='w')\n",
-    "    \n",
+    "                plt.annotate(label, coordinates, textcoords=\"offset points\", xytext=(10, 30), ha='left',\n",
+    "                             arrowprops={'color': 'red',\n",
+    "                                         'arrowstyle': 'simple'}, fontsize=12,\n",
+    "                             bbox=dict(facecolor='red', alpha=0.5), color='w')\n",
+    "\n",
     "    plt.tight_layout()\n",
     "    plt.show()\n",
     "    "
@@ -305,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 452,
+   "execution_count": 454,
    "metadata": {},
    "outputs": [
     {
