Changes in code

--- a/04.KeypointsEstimationModel.ipynb
+++ b/04.KeypointsEstimationModel.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,8 @@
     "import torchvision.transforms as transforms\n",
     "from PIL import Image\n",
     "from scipy.ndimage import gaussian_filter\n",
-    "from torch.utils.data import Dataset"
+    "from torch.utils.data import Dataset, DataLoader\n",
+    "from torch import nn"
    ]
   },
   {
@@ -339,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -456,12 +457,18 @@
     "        heatmaps = np.zeros((17, 64, 48))\n",
     "        for i in range(17):\n",
     "            if rescaled_keypoints[i][2] > 0:\n",
+    "                \n",
     "                temp_x = rescaled_keypoints[i][1]\n",
     "                temp_y = rescaled_keypoints[i][0]\n",
-    "                heatmaps[i, temp_x, temp_y] = 1.0\n",
-    "                heatmaps[i, :, :] = gaussian_filter(heatmaps[i, :, :], sigma=2, mode='constant', cval=0.0)\n",
-    "                heatmaps[i, :, :] = (heatmaps[i, :, :] - np.min(heatmaps[i, :, :])) / (np.max(heatmaps[i, :,:]) - np.min(heatmaps[i, :, :]))\n",
-    "\n",
+    "                \n",
+    "                if temp_x>=64 or temp_y>=48:\n",
+    "                    continue\n",
+    "                    rescaled_keypoints[i][2] = 0\n",
+    "                else:\n",
+    "                    heatmaps[i, temp_x, temp_y] = 1.0\n",
+    "                    heatmaps[i, :, :] = gaussian_filter(heatmaps[i, :, :], sigma=2, mode='constant', cval=0.0)\n",
+    "                    heatmaps[i, :, :] = (heatmaps[i, :, :] - np.min(heatmaps[i, :, :])) / (np.max(heatmaps[i, :,:]) - np.min(heatmaps[i, :, :]))\n",
+    "                \n",
     "        validity = [1 if v > 0 else 0 for v in rescaled_keypoints[:,2]]   \n",
     "\n",
     "\n",
@@ -475,11 +482,35 @@
     "        return len(self.clean_annotations)\n",
     "\n",
     "    def __getitem__(self, id):\n",
-    "        annotation = self.data[id]\n",
+    "        annotation = self.annotations[id]\n",
     "        image = self.load_image(annotation)\n",
     "        heatmap, validity = self.heatmaps(annotation)\n",
     "        \n",
     "        return {'image': image, 'heatmap': heatmap, 'validity': validity}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# initialize Datasets\n",
+    "train_dataset = AnnotationsDataset(annotations_path='./annotations/person_keypoints_train2017.json',\n",
+    "                                   img_dir='./train2017')\n",
+    "train_dataloader = DataLoader(train_dataset, batch_size=16, shuffle=True, num_workers=0)\n",
+    "\n",
+    "val_dataset = AnnotationsDataset(annotations_path='./annotations/person_keypoints_val2017.json', img_dir='./val2017')\n",
+    "val_dataloader = DataLoader(val_dataset, batch_size=16, shuffle=True, num_workers=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sample = next(iter(train_dataloader))"
    ]
   },
   {
